# astrid.tech-old

./: .bazelrc  .bazelrc.local  .dockerignore  .env  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  Cargo.toml  Example.hs  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  astrid.tech.code-workspace  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  firewalld-service.xml  flake.nix  gatsby-browser.js  gatsby-config.js  gatsby-node.js  hie.yaml  lc.sh  massresize.sh  package.json  package.yaml  plenglin.github.io.code-workspace  projects.json  quickpost.sh  shell.nix  stack.yaml  static.config.js  tsconfig.json  zlib.BUILD.bazel
LATG/: .hie-bios  BUILD.bazel
LATG/DB/: BUILD.bazel  Schema.hs  schema.sql
LATG/DB/migrations/: 20210924224659_initial.sql
LATG/Example/: .mediaignore  2015-08-10.md  2015-08-10.md.yml
LATG/Example/2010/: 2010-09-25-fermat.tex  2010-09-25-fermat.tex.yml
LATG/Example/2021/: 2021-09-25-test-post.md  2021-09-25T01-31-40-328Z.html  2021-09-25T01-31-40-328Z.html.yml  something.HTM  something.HTM.yml
LATG/Example/the-content-property/: with-src.yml
LATG/GraphQL/: BUILD.bazel  Schema.hs  schema.graphql
LATG/Importer/: BUILD.bazel  FileSchema.hs  Insert.hs  InsertSchema.hs  LoadContent.hs  Main.hs
LATG/Importer/Test/: BUILD.bazel  FileSpec.hs  LoadSpec.hs
LATG/Server/: BUILD.bazel
aay_tw_shortener/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml
aay_tw_shortener/cargo/: BUILD.bazel
aay_tw_shortener/resources/test/noredirect/: long-refresh.html
aay_tw_shortener/src/: main.rs  mapper.rs  newbase60.rs
astrid_tech_cms/: .gitignore  Cargo.toml
astrid_tech_cms/migrations/2020-12-28-224644_test/: down.sql  up.sql
astrid_tech_cms/migrations/2021-06-13-001316_initial/: down.sql  up.sql
astrid_tech_cms/src/: content.rs  loader.rs  main.rs  schema.rs
astrid_tech_cms/src/actor/: post_creator.rs
astrid_tech_cms/src/content/: content.rs  image.rs  index.rs  post.rs  post_registry.rs  site_content.rs
astrid_tech_cms/src/web/: micropub.rs  posts.rs
astrid_tech_ssg/: .gitignore  Cargo.toml  testfile.md
astrid_tech_ssg/src/: input_types.rs  main.rs
at_loader/: .env  .gitignore  Cargo.toml
at_loader/resources/test/blog-posts/: exotic-features.md
at_loader/resources/test/blog-posts/separate-meta/: index.md  meta.yaml
at_loader/resources/test/blog-posts/site-release/: index.md
at_loader/resources/test/projects/metaless/: index.md
at_loader/src/: article.rs  document.rs  filesystem.rs  in_data.rs  input_types.rs  jupyter.rs  lib.rs  main.rs  markdown.rs  page.rs  tags.rs  test_util.rs  timestream.rs  util.rs
at_loader/src/models/: mod.rs
at_objects/: Cargo.toml
at_objects/src/: article.rs  input_types.rs  lib.rs  md_util.rs  page.rs  timestream.rs
at_web/: Cargo.toml
at_web/src/: main.rs  routes.rs  shortener_routes.rs
at_web/src/routes/: blog.rs  shortener.rs
cms/: .gitattributes  .gitignore  Cargo.toml  ChangeLog.md  LICENSE  README.md  astrid-tech-cms.cabal  cms.cabal  docker-compose.yml  hie.yaml  package.yaml  stack.yaml
cms/migrations/2021-06-13-001316_initial/: down.sql  up.sql
cms/migrations/2022-10-06-001316_initial/: down.sql  up.sql
cms/resources/test/blog-posts/site-release/: index.md
cms/resources/test/projects/bad-meta/: index.md
cms/resources/test/projects/collision-zone/: index.md
cms/src/: actor.rs  content.rs  main.rs  schema.rs  syndication.rs  web.rs
cms/src/Astrid/Tech/: Build.hs  CLI.hs  CacheSchema.hs  MessageError.hs  Slug.hs
cms/src/Astrid/Tech/InputSchema/: Article.hs  Blog.hs  Content.hs  Note.hs  Page.hs  Project.hs  (+3 more)
cms/src/content/: content.rs  index.rs  media.rs  post.rs  post_registry.rs
cms/src/content/post/: fs.rs
cms/src/web/: index.rs  mod.rs  posts.rs
cms/src/web/components/: mod.rs  navbar.rs
latg/: .env  BUILD.bazel  Cargo.toml  Example.hs  Main.hs  README.md  Schema.hs  docker-compose.dev.yaml
latg/db/: .gitattributes  BUILD.bazel  Cargo.toml  Schema.hs  schema.sql
latg/db/LATG/DB/: Schema.hs  schema.sql
latg/db/migrations/: 20210924224659_initial.sql
latg/example/: .docignore  2015-01-01.html  2015-01-01.html.json  2015-08-10.md.yml  README.md  non-sourced.json  somepage.md
latg/example/2010/: 2010-09-25-fermat.tex.yml
latg/example/2012/: 2012-12-21-end-of-the-world.txt  2012-12-21-end-of-the-world.txt.toml
latg/example/2021/: 2021-09-25-test-post.md  2021-09-25T01-31-40-328Z.html.yml  something.HTM.yml
latg/example/projects/: hexagonal-pyramid.md
latg/example/the-content-property/: embedded-content.yml  with-src.yml
latg/graphql/: BUILD.bazel  Cargo.toml  Schema.hs  schema.graphql
latg/graphql/LATG/GraphQL/: Schema.hs
latg/importer/: BUILD.bazel  Cargo.toml  FileSchema.hs  InsertSchema.hs  LoadContent.hs
latg/importer/FileSchema/: Post.hs  Slug.hs
latg/importer/app/: Main.hs
latg/importer/src/: file_gen.rs  file_schema.rs  load_content.rs  main.rs  transform.rs
latg/importer/src/transform/: graphviz.rs  md.rs
latg/importer/test/: BUILD.bazel  FileSpec.hs  LoadSpec.hs  SmokeSpec.hs  Spec.hs
latg/server/: BUILD.bazel  Cargo.toml
latg/server/app/: Main.hs
upload-cli/: .envrc  .gitignore  package.yaml  pyproject.toml  upload2backblaze.py  uploadresult.csv
upload-cli/app/: Main.hs
upload-cli/src/AT/: Uploader.hs
upload-cli/src/AT/Uploader/: CLI.hs  Image.hs  Load.hs
wm-receiver/: .dockerignore  .env  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md  entrypoint.sh  test.sh
wm-receiver/.cargo/: config.toml
wm-receiver/.devcontainer/: Dockerfile  devcontainer.json
wm-receiver/cargo/: BUILD.bazel
wm-receiver/migrations/2021-09-17-042821_create_mentions/: up.sql
wm-receiver/resources/main/scripts/: reset_to_latest.sh
wm-receiver/resources/scripts/: push_to_git.sh  reset_to_latest.sh
wm-receiver/resources/test/mock_server/: article.html
wm-receiver/src/: db.rs  main.rs  routes.rs  schema.rs  webmention.rs
wm-receiver/src/webmention/: data.rs  git.rs  processing.rs  requesting.rs  storage.rs  writing.rs
(+1251 files in other folders)
