[package]
name = "astrid_tech"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"

[[bin]]
name = "astrid-tech"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
newbase60 = "0.1.0"
reqwest = "0.11.2"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.12.0"
oxide-auth-rocket = "0.1.0"
oxide-auth = "0.5.0"
rand = "0.8.3"
redis = "0.20.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["tera_templates"]

[dev-dependencies]
rstest = "0.7.0"
