# Give your project a name. :)
workspace(name = "astrid_tech")

# Load the repository rule to download an http archive.
load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive"
)

# Download rules_haskell and make it accessible as "@rules_haskell".
http_archive(
    name = "rules_haskell",
    strip_prefix = "rules_haskell-ea0e70ace2432a490d4ab4c4e54617612466e584",
    urls = ["https://github.com/tweag/rules_haskell/archive/ea0e70ace2432a490d4ab4c4e54617612466e584.tar.gz"],
    sha256 = "73941c142bf37df115817083c0834fbc3269c963c7049bfbc345a9c76162e918",
)

load(
    "@rules_haskell//haskell:repositories.bzl",
    "rules_haskell_dependencies",
)

# Setup all Bazel dependencies required by rules_haskell.
rules_haskell_dependencies()

load(
    "@rules_haskell//haskell:toolchain.bzl",
    "rules_haskell_toolchains",
)

load(
    "@rules_haskell//haskell:cabal.bzl",
    "stack_snapshot"
)

stack_snapshot(
    name = "stackage",
    packages = [
        "aeson",
        "base",
        "bytestring",
        "containers",
        "directory",
        "either",
        "filepath",
        "frontmatter",
        "hie-bios",
        "hspec",
        "hspec-discover",
        "htoml",
        "lens",
        "morpheus-graphql",
        "opaleye",
        "optparse-applicative",
        "product-profunctors",
        "servant",
        "system-fileio",
        "text",
        "time",
        "transformers",
        "uuid",
        "vector",
        "yaml",
    ],
    snapshot = "lts-18.11",
)

# Download a GHC binary distribution from haskell.org and register it as a toolchain.
rules_haskell_toolchains(
    version = "8.10.4",

    # https://lexi-lambda.github.io/blog/2018/02/10/an-opinionated-guide-to-haskell-in-2018/
    compiler_flags = [
        "-Wall",
        "-Wcompat",
        "-Wincomplete-record-updates",
        "-Wincomplete-uni-patterns",
        "-Wredundant-constraints",
    ],
)

# See https://github.com/aherrmann/stack_snapshot_example/blob/0db0b540583e3061ac2b7b154a60d726ef227311/WORKSPACE#L78-L105
http_archive(
    name = "hspec-discover",
    strip_prefix = "hspec-discover-2.8.3",
    urls = [
        "https://hackage.haskell.org/package/hspec-discover-2.8.3/hspec-discover-2.8.3.tar.gz",
    ],
    sha256 = "9a99fbb1dba6ad3ae9eb222ca073103b037492b8ec21a23e4320ea8404ce3227",
    # Thanks to this archive, we can make executable "hspec-discover"
    # available to other rules (see "@hspec-discover" references).
    # To build the executable, we use the haskell_cabal_binary rule:
    build_file_content = """
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
)
haskell_cabal_binary(
    name = "hspec-discover",
    srcs = glob(["**"]),
    deps = [
        "@stackage//:base",
        "@stackage//:directory",
        "@stackage//:filepath",
        "@stackage//:hspec-discover",
    ],
    visibility = ["//visibility:public"],
)
""",
)