load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "zlib",
    # Import ':z' as 'srcs' to enforce the library name 'libz.so'. Otherwise,
    # Bazel would mangle the library name and e.g. Cabal wouldn't recognize it.
    srcs = [":z"],
    hdrs = glob(["*.h"]),
    includes = ["."],
    visibility = ["//visibility:public"],
)
cc_library(name = "z", srcs = glob(["*.c"]), hdrs = glob(["*.h"]))
