package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
    "haskell_repl",
)

filegroup(
    name = "content-example",
    srcs = glob(["Example/**/*"]),
)

haskell_toolchain_library(name = "base")

haskell_repl(
    name = "hie-bios",
    collect_data = False,
    testonly = True,
    deps = [
        "//LATG/Importer:Importer",
        "//LATG/Importer/Test:Test",
        "//LATG/GraphQL:hs",
        "//LATG/DB:hs",
    ],
)
