[package]
name = "astrid_tech_cms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
gray_matter = "0.1"
actix-web = "3.3"
itertools = "0.10"
url = { version = "2.2", features = ["serde"] }