[package]
name = "astrid_tech_ssg"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10.0"
gray_matter = "0.1.0"
serde = { version = "1.0.125" , features = ["derive"] }
serde_yaml = "0.8.17"
