[package]
name = "at_loader"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
yaml-rust = "0.4.4"
pandoc_ast = "0.8.0"
pandoc = "0.8.4"
frontmatter = "0.4.0"