[package]
name = "astrid_tech_cms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = "2.0.0"
gray_matter = "0.1"
itertools = "0.10"
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
vfs = "0.5"

[dev-dependencies]
serde_qs = "0.8.3"
