package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
    "haskell_repl",
)

filegroup(
    name = "content-example",
    srcs = glob(["example/**/*"]),
)

haskell_toolchain_library(name = "base")
