[tool.poetry]
name = "upload-cli"
version = "0.1.0"
description = ""
authors = ["Astrid Yu <astrid@astrid.tech>"]
readme = "README.md"
packages = [{include = "upload_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
boto3 = "^1.26.16"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
