[package]
name = "wm-receiver"
version = "0.1.0"
authors = ["Astrid Yu <astrid@astrid.tech>"]
edition = "2018"
description = "A webmention receiver and processor."
publish = false
homepage = "https://astrid.tech/projects/astrid-tech"
repository = "https://github.com/astralbijection/astrid.tech.git"

[[bin]]
name = "wm-receiver"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
newbase60 = "0.1.0"
reqwest = "0.11.2"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
scraper = "0.12.0"

[dev-dependencies]
rstest = "0.7.0"
