[package]
authors = ["Astrid Yu <astrid@astrid.tech>"]
description = "A webmention receiver and processor."
edition = "2018"
homepage = "https://astrid.tech/projects/astrid-tech"
name = "wm-receiver"
publish = false
repository = "https://github.com/astralbijection/astrid.tech.git"
version = "0.1.0"
[[bin]]
name = "wm-receiver"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
newbase60 = "0.1.0"
reqwest = "0.11.2"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
scraper = "0.12.0"

[dependencies.diesel]
default-features = false
features = ["sqlite"]
version = "*"

[dependencies.microformats_parser]
git = "https://gitlab.com/maxburon/microformats-parser.git"

[dev-dependencies]
rstest = "0.11.0"
