[package]
authors = ["Astrid Yu <astrid@astrid.tech>"]
description = "A webmention receiver and processor."
edition = "2018"
homepage = "https://astrid.tech/projects/astrid-tech"
name = "wm-receiver"
publish = false
repository = "https://github.com/astralbijection/astrid.tech.git"
version = "0.1.0"
[[bin]]
name = "wm-receiver"
path = "src/main.rs"

[dependencies]
diesel_migrations = "*"
dotenv = "*"
reqwest = "*"
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
sanitize-filename = "*"
scraper = "*"
serde = "*"
serde_json = "*"
sha256 = "*"
url = "*"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "*"

[dependencies.microformats_parser]
git = "https://gitlab.com/maxburon/microformats-parser.git"

[dependencies.tokio]
features = ["process", "sync"]
version = "*"

[dev-dependencies]
rstest = "0.11.0"
tempdir = "*"
