package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
    "haskell_repl",
)

filegroup(
    name = "graphql-src",
    srcs = glob(["*.graphql"]),
)

haskell_library(
    name = "hs",
    srcs = [
        ":Schema.hs", 
    ],
    extra_srcs = [":graphql-src"],
    deps = [
        "//LATG:base", 
        "@stackage//:morpheus-graphql",
        "@stackage//:text",
        "@stackage//:bytestring",
    ],
)
