package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

filegroup(
    name = "migrations",
    srcs = glob(["migrations/*.sql"]),
)

haskell_library(
    name = "hs",
    srcs = [
        "Schema.hs",
    ],
    deps = [
        "//latg:base", 
        "@stackage//:opaleye",
    ],
)
