package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
)

haskell_library(
    name = "file-schema",
    srcs = [
        "FileSchema.hs",
    ],
    compiler_flags = [
        "-XDeriveGeneric",
        "-XDuplicateRecordFields",
        "-XNamedFieldPuns",
    ],
    deps = [
        "//latg:base", 
        "@stackage//:aeson",
        "@stackage//:bytestring",
        "@stackage//:text",
        "@stackage//:time",
        "@stackage//:uuid",
    ],
)

haskell_binary(
    name = "importer",
    main_function = "LATG.Importer.Main.main",
    srcs = [
        ":Main.hs", 
    ],
    deps = [
        "//latg:base", 
        ":file-schema",
        "@stackage//:bytestring",
        "@stackage//:opaleye",
        "@stackage//:text",
    ],
)
