[package]
edition = "2021"
name = "latg-importer"
version = "0.1.0"
[dependencies]
gray_matter = "*"
html-escape = "*"
pulldown-cmark = "*"
serde_json = "*"
serde_yaml = "*"
toml = "*"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.uuid]
features = ["serde"]
version = "*"

[dev-dependencies]
rstest = "*"
