package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
    "haskell_repl",
)

haskell_binary(
    name = "server",
    main_function = "LATG.Server.Main.main",
    srcs = [
        ":Main.hs", 
    ],
    deps = [
        "//latg:base", 
        "//latg/graphql:hs",
        "@stackage//:bytestring",
        "@stackage//:morpheus-graphql",
        "@stackage//:opaleye",
        "@stackage//:servant",
        "@stackage//:text",
    ],
)
