package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_test",
)

haskell_test(
    name = "Test",
    tools = ["@hspec-discover"],
    compiler_flags = [
        "-DHSPEC_DISCOVER=$(location @hspec-discover)"
    ],
    srcs = [
        "Spec.hs",
        "FileSpec.hs",
        "LoadSpec.hs",
    ],
    data = [
        "//LATG:content-example",
    ],
    deps = [
        "//LATG:base", 
        "//LATG/Importer:file-schema", 
        "//LATG/Importer:insert-schema", 
        "//LATG/Importer:load-content", 
        "@stackage//:aeson",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:uuid",
    ],
)
