package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_test",
)

haskell_test(
    name = "test",
    tools = ["@hspec-discover"],
    compiler_flags = [
        "-DHSPEC_DISCOVER=$(location @hspec-discover)"
    ],
    srcs = [
        "Spec.hs",
        "FileSpec.hs",
        "LoadSpec.hs",
        "SmokeSpec.hs",
    ],
    data = [
        "//latg:content-example",
    ],
    deps = [
        "//latg:base", 
        "//latg/importer:file-schema", 
        "//latg/importer:insert-schema", 
        "//latg/importer:load-content", 
        "@stackage//:aeson",
        "@stackage//:bytestring",
        "@stackage//:hspec",
        "@stackage//:uuid",
    ],
)
